<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ofCampus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Classifieds">Classifieds</string>
    <string name="Jobs">Jobs</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Help">Help</string>
    <string name="Legal">Legal</string>
    <string name="Login">Login</string>
    <string name="Name">Username</string>
    <string name="Remember_Me_On_This_Device">Remember me on this device</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="menu_post_ad">Post an ad</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="valid_credentials_">Invalid Credentials!</string>
    <string name="valid_credentials_msg">Please enter valid credentials to login.</string>
    <string name="Verify">Verify</string>
    <string name="ok">OK</string>
    <string name="login_failed_">Login Failed!</string>
    <string name="hold_on_">Hold on!</string>
    <string name="login_in_">Login in&#8230;&#8230;&#8230;</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_email_verification">EmailVerificationActivity</string>
    <string name="enter_username">Username</string>
    <string name="email">Email</string>
    <string name="valid_university_email">Must be valid university email addresss Eg. abc@xyz.edu</string>
    <string name="activate">Activate</string>
    <string name="password">Password</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="enter_valid_username_">Enter valid username.</string>
    <string name="valid_username_">Inalid Username!</string>
    <string name="invalid_email_">Invalid Email!</string>
    <string name="enter_valid_email_">Enter valid email.</string>
    <string name="invalid_password_">Invalid Password!</string>
    <string name="enter_valid_password_">Enter valid password.</string>
    <string name="password_miss_match_">Password Miss-match!</string>
    <string name="both_the_pass_should_match_">Both the pass should match.</string>
    <string name="signup_failed_">SignUp Failed!</string>
    <string name="classified">Classified</string>
    <string name="title_activity_classified">ClassifiedActivity</string>
    <string name="signing_up_">Signing Up &#8230;&#8230;&#8230;</string>
    <string name="Resend_Code">Resend code</string>

    <string-array name="menu_array">
        <item>Home</item>
        <item>My Settings</item>
        <item>My Classifieds</item>
        <item>My Job Profile</item>
        <item>My Alerts</item>
        <item>Logout</item>
    </string-array>
    
    <string-array name="menu_array_classified">
        <item>Classified</item>
        <item>My Settings</item>
        <item>My Classifieds</item>
        <item>My Job Profile</item>
        <item>My Alerts</item>
        <item>Logout</item>
    </string-array>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Activation_Message">Enter more detail(optional)</string>
    <string name="basic_details">Basic Details</string>
    <string name="name_">Name:</string>
    <string name="year_of_graduation_">Year of Graduation:</string>
    <string name="primary_email_">Primary Email:</string>
    <string name="contact_information">Contact Information</string>
    <string name="mobile_no_">Mobile No:</string>
    <string name="location_information">Location Information</string>
    <string name="alternate_email_">Alternate Email:</string>
    <string name="logout_">Logout??</string>
    <string name="are_you_sure_wants_to_logout_">Are you sure wants to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="full_name">Full Name</string>
    <string name="invalid_fullname_">Invalid Fullname!</string>
    <string name="enter_valid_fullname">Enter valid fullname</string>
    <string name="email_not_verfied">You have not verfied email yet, please verify your email.</string>
    <string name="Real_Estate">Real Estate</string>
    <string name="Consulting">Consulting</string>
    <string name="Post_An_Add">Post an Ad</string>
    <string name="Next_Page">Next Page</string>
    <string name="Edit_personal_Details">Edit Personal Details</string>
    <string name="Edit_Type_Of_Ad">Edit Type of Ad</string>
    <string name="Posted_By">Posted By</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Whatsapp_Number">Whatsapp Number</string>
    <string name="Email_Address">Email Address</string>
    <string name="Edit_Basic_Details">Edit Basic Details</string>
    <string name="Tittle">Tittle ( 20 words or less )</string>
    <string name="Area">Area Sq Ft.</string>
    <string name="Enter_Sub_Text">Enter Sub urb (text)</string>
    <string name="Post_Classifieds">Post Classifieds</string>
    <string name="Add_More_Details">Add More Details (optional)</string>
    <string name="Add_Pictures">Add Pictures (optional)</string>
    <string name="Price">Price ( INR )</string>
    <string name="Home">Home</string>
    <string name="activation_message">You have signup successfully, Activation code sent your account successfully. Please activate your account to login.</string>
    <string name="activation_pending_">Activation Pending!</string>
    <string name="verification_code">Verification code</string>
    <string name="loading_">Loading...</string>
    <string name="oops_">Oops!!</string>
    <string name="save_settings">Save Settings</string>
    <string name="city_">City:</string>
    <string name="country_">Country:</string>
    <string name="alternate_mobile_">Alternate Mobile:</string>
    <string name="whatsapp_number_">WhatsApp Number:</string>
    <string name="error_">Error!</string>
    <string name="setting_update_msg">Your settings has been updated successfully.</string>
    <string name="success_">Success!</string>
    <string name="network_error">Network Error!</string>
    <string name="network_error_message">Please check your data connection and try again later.</string>
    <string name="description">Description</string>
    <string name="enter_country">Enter country.</string>
    <string name="enter_city">Enter City</string>
    <string name="select_category">Select Category</string>
    <string name="select_any_one_option">Select any one option</string>
    <string name="select_subcategory">Select Subcategory</string>
    <string name="cancel">Cancel</string>
    <string name="apartment_type">Apartment Type</string>
    <string name="alert">Alert</string>
    <string name="enter_ad_title_">Enter ad title.</string>
    <string name="enter_ad_description_">Enter ad description.</string>
    <string name="enter_city_">Enter city.</string>
    <string name="enter_suburb_">Enter suburb.</string>
    <string name="enter_area_in_sq_ft_">Enter area in Sq.ft.</string>
    <string name="enter_area_in_inr_">Enter area in INR.</string>
    <string name="enter_mobile_number_">Enter mobile number.</string>
    <string name="enter_posted_by_">Enter posted by.</string>
    <string name="select_category_">Select category.</string>
    <string name="select_subcategory_">Select subcategory.</string>
    <string name="select_option_">Select option.</string>
    <string name="error_while_saving_classified_">Error while saving classified.</string>
    <string name="not_created_classifieds">You have not created any classified yet.</string>

</resources>