<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/edit_personal_details_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/gray_color"
            android:paddingBottom="2dp"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:text="@string/Edit_personal_Details"
            android:textColor="@color/white_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_posted_by"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_personal_details_textview"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background_selector"
            android:ems="5"
            android:hint="@string/Posted_By"
            android:inputType="text" />

        <EditText
            android:id="@+id/mobile_no_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_posted_by"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background_selector"
            android:ems="5"
            android:hint="@string/Mobile_Number"
            android:inputType="number" />

        <EditText
            android:id="@+id/whatsapp_no_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobile_no_edittext"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background_selector"
            android:ems="5"
            android:hint="@string/Whatsapp_Number"
            android:inputType="number" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/whatsapp_no_edittext"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background_selector"
            android:ems="5"
            android:hint="@string/Email_Address"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/edit_type_of_ad_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_edittext"
            android:layout_marginTop="10dp"
            android:background="@color/gray_color"
            android:paddingBottom="2dp"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:text="@string/Edit_Type_Of_Ad"
            android:textColor="@color/white_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_type_of_ad_textview"
            android:layout_margin="10dp"
            android:background="@drawable/img_spinner"
            android:gravity="left"
            android:hint="@string/select_category"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/sub_category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_spinner"
            android:layout_margin="10dp"
            android:background="@drawable/img_spinner"
            android:clickable="true"
            android:gravity="left"
            android:hint="@string/select_subcategory"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/option_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sub_category_spinner"
            android:layout_margin="10dp"
            android:background="@drawable/img_spinner"
            android:gravity="left"
            android:hint="@string/select_any_one_option"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/btn_nextPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option_spinner"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/black_button_selector"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/Next_Page"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

</ScrollView>