<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/edit_personal_details_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/gray_color"
                android:paddingBottom="2dp"
                android:paddingLeft="7dp"
                android:paddingTop="2dp"
                android:text="@string/Edit_Basic_Details"
                android:textColor="@color/white_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_personal_details_textview"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background_selector"
                android:ems="5"
                android:hint="@string/Tittle"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <EditText
                android:id="@+id/description_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_edittext"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background_selector"
                android:hint="@string/description"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:singleLine="false" />

            <EditText
                android:id="@+id/country_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_edittext"
                android:layout_margin="10dp"
                android:hint="@string/enter_country"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/city_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country_spinner"
                android:layout_margin="10dp"
                android:hint="@string/enter_city"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:id="@+id/appartment_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_suburb"
                android:layout_margin="10dp"
                android:background="@drawable/img_spinner"
                android:hint="@string/apartment_type"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/dimen_16sp" />

            <EditText
                android:id="@+id/area_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appartment_type_spinner"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background_selector"
                android:ems="5"
                android:hint="@string/Area"
                android:imeOptions="actionNext"
                android:inputType="number" />

            <EditText
                android:id="@+id/price_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_edittext"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background_selector"
                android:ems="5"
                android:hint="@string/Price"
                android:imeOptions="actionDone"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_nextPage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_edittext"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_button_selector"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/Next_Page"
                android:textColor="@color/white_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_suburb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/city_spinner"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background_selector"
                android:ems="5"
                android:hint="@string/Enter_Sub_Text"
                android:imeOptions="actionNext"
                android:inputType="text" >

                <requestFocus />
            </EditText>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>